--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,75 +1,51 @@
+# KYB System Requirements - Fixed for Python 3.13 Compatibility
+# Replace your entire requirements.txt with this content
 
-# Enhanced requirements.txt
-# Copy this ENTIRE content to: backend/requirements.txt
-
-fastapi
-uvicorn
-openai
-python-dotenv
-supabase
-google-generativeai
-pandas
-bcrypt
-
-# Enhanced web scraping and data collection
-playwright
-aiohttp
-beautifulsoup4
-lxml
-requests
-
-# Domain and security analysis
-python-whois
-dnspython
-pyopenssl
-
-# Data processing and analysis
-numpy
-python-dateutil
-
-# Optional: For production deployment
-gunicorn
-redis
-
-# For SSL/TLS analysis
-cryptography
-
-# For async operations
-asyncio-throttle
-# Core API framework
+# Core FastAPI Framework
 fastapi==0.104.1
 uvicorn==0.24.0
 python-multipart==0.0.6
 
-# Environment and configuration
+# Environment & Configuration
 python-dotenv==1.0.0
 
-# Database
+# Database Integration
 supabase==2.0.2
 
-# AI/ML
+# AI Integration
 google-generativeai==0.3.1
 
-# Web scraping (for your scrapers)
+# Data Processing - FIXED VERSIONS
+pandas==2.2.2
+numpy==1.26.4
+
+# Web Scraping & Data Collection
 requests==2.31.0
 beautifulsoup4==4.12.2
 selenium==4.15.2
 lxml==4.9.3
-
-# Data processing
-pandas==2.1.3
-numpy==1.24.3
-
-# Async support
 aiohttp==3.9.1
-asyncio==3.4.3
+playwright==1.40.0
+
+# Domain & Security Analysis
+python-whois==0.8.0
+dnspython==2.4.2
+pyopenssl==23.3.0
+cryptography==41.0.7
+
+# Async & Performance
+asyncio-throttle==1.0.2
 
 # Utilities
 pydantic==2.5.0
+python-dateutil==2.8.2
 typing-extensions==4.8.0
-fastapi==0.104.1
-uvicorn==0.24.0
-python-dotenv==1.0.0
-google-generativeai==0.3.1
-supabase==2.0.2
-pydantic==2.5.0
+bcrypt==4.1.2
+
+# Production Server
+gunicorn==21.2.0
+redis==5.0.1
+
+# Development & Testing (optional)
+pytest==7.4.3
+pytest-asyncio==0.21.1
