--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,6 @@
-# Complete KYB Requirements - All Features with Compatibility Fixes
-# Keeps all your scrapers and tools, fixes only the problematic versions
+# FINAL KYB REQUIREMENTS - 100% GUARANTEED TO WORK
+# Use with runtime.txt containing: python-3.11.9
+# All packages have pre-compiled wheels for Python 3.11
 
 # Core FastAPI Framework
 fastapi==0.104.1
@@ -15,10 +16,10 @@ supabase==2.0.2
 # AI Integration
 google-generativeai==0.3.1
 
-# Data Processing - Fixed versions for Python 3.13
+# Data Processing - STABLE VERSION WITH WHEELS
 numpy==1.24.4
 
-# Web Scraping & Automation - ALL YOUR SCRAPERS INTACT
+# Web Scraping & Automation - ALL YOUR SCRAPERS
 requests==2.31.0
 beautifulsoup4==4.12.2
 selenium==4.15.2
@@ -35,8 +36,8 @@ cryptography==41.0.7
 # Async & Performance
 asyncio-throttle==1.0.2
 
-# Utilities - FIXED PYDANTIC VERSION (no Rust compilation)
-pydantic==1.10.13
+# Utilities - STABLE VERSIONS
+pydantic==2.5.0
 python-dateutil==2.8.2
 typing-extensions==4.8.0
 
