--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -17,7 +17,7 @@ supabase==2.0.2
 google-generativeai==0.3.1
 
 # Data Processing - STABLE VERSION WITH WHEELS
-numpy==1.24.4
+numpy>=1.26.0
 
 # Web Scraping & Automation - ALL YOUR SCRAPERS
 requests==2.31.0
@@ -53,3 +53,6 @@ redis==5.0.1
 # Development & Testing
 pytest==7.4.3
 pytest-asyncio==0.21.1
+
+setuptools>=65.0.0
+wheel
