--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -28,7 +28,7 @@ aiohttp==3.9.1
 playwright==1.40.0
 
 # Domain & Security Analysis - YOUR WHOIS/DNS SCRAPERS
-python-whois==0.8.0
+pydantic>=2.8.0
 dnspython==2.4.2
 pyopenssl==23.3.0
 cryptography==41.0.7
