--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -37,7 +37,7 @@ cryptography==41.0.7
 asyncio-throttle==1.0.2
 
 python-dateutil==2.8.2
-typing-extensions==4.8.0
+typing-extensions>=4.12.2
 
 # Authentication
 bcrypt==4.1.2
