--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -23,7 +23,8 @@ numpy>=1.26.0
 requests==2.31.0
 beautifulsoup4==4.12.2
 selenium==4.15.2
-lxml==4.9.3
+lxml>=5.0.0
+greenlet>=3.1.0
 aiohttp==3.9.1
 playwright==1.40.0
 
