--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -26,7 +26,7 @@ selenium==4.15.2
 lxml>=5.0.0
 greenlet>=3.1.0
 aiohttp==3.9.1
-playwright==1.40.0
+playwright>=1.45.0
 
 # Domain & Security Analysis - YOUR WHOIS/DNS SCRAPERS
 pydantic>=2.8.0
