Fix backend issues: add missing timedelta import and python-whois dependency
- Add timedelta import to risk_assessment.py to fix 'timedelta is not defined' error
- Add python-whois==0.9.4 to requirements.txt to enable WHOIS scraper functionality
- This should resolve the 500 Internal Server Error when creating assessments

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -33,6 +33,7 @@ pydantic>=2.8.0
 dnspython==2.4.2
 pyopenssl==23.3.0
 cryptography==41.0.7
+python-whois==0.9.4
 
 # Async & Performance
 asyncio-throttle==1.0.2
